[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/traps/weakCircleTrap.png" type="Texture" id=1]
[ext_resource path="res://scripts/trapScripts/circleDiskResponsive.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/sfx/trapsSfx/circleWeak.wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/trapScripts/weakCircleDiskTrail.gd" type="Script" id=4]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 1.0, 0, 0, Vector2( 1, 1 ), 0.995305, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=2]
radius = 27.0185

[sub_resource type="CircleShape2D" id=3]
radius = 33.0151

[node name="circleDiskResponsiveMediumRadius" type="StaticBody2D"]
collision_layer = 256
collision_mask = 0
script = ExtResource( 2 )
crazyness = 200

[node name="ball" type="RigidBody2D" parent="."]
position = Vector2( 0, 80 )
collision_layer = 256
collision_mask = 8
linear_damp = 0.0
angular_damp = 1.0

[node name="trail2D" type="Line2D" parent="ball"]
width = 20.0
width_curve = SubResource( 1 )
default_color = Color( 1, 0, 0.258824, 0.85098 )
antialiased = true
script = ExtResource( 4 )
lenght = 34
yConnectionPointTrailToTrap = 0

[node name="sprite" type="Sprite" parent="ball"]
position = Vector2( -5.96046e-08, 1.99994 )
scale = Vector2( 0.103489, 0.103489 )
texture = ExtResource( 1 )

[node name="collisionShape2D" type="CollisionShape2D" parent="ball"]
shape = SubResource( 2 )

[node name="applyImpulseTimer" type="Timer" parent="ball"]
wait_time = 5.0
autostart = true

[node name="damageArea2D" type="Area2D" parent="ball"]
collision_layer = 128
collision_mask = 0

[node name="collisionShape2D" type="CollisionShape2D" parent="ball/damageArea2D"]
shape = SubResource( 3 )

[node name="dampedSpringJoint2D" type="DampedSpringJoint2D" parent="."]
node_a = NodePath("..")
node_b = NodePath("../ball")
bias = 0.9
length = 80.0
stiffness = 64.0
damping = 16.0

[node name="trapSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "sfx"

[connection signal="timeout" from="ball/applyImpulseTimer" to="." method="_on_applyImpulseTimer_timeout"]
[connection signal="body_entered" from="ball/damageArea2D" to="." method="_on_damageArea2D_body_entered"]
